<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/radioButtonGroup"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RadioButton
        android:id="@+id/status_alive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_alive" />

    <RadioButton
        android:id="@+id/status_dead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_dead" />

    <RadioButton
        android:id="@+id/status_unknown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_unknown" />
</RadioGroup>